feat(user): add logout route
