# @types/database.ts
@@ -1,4 +1,8 @@
-export type CollectionName = 'manga' | 'md_user';
+export type CollectionName = 'manga' | 'user_session';
+
+export interface DBSchema {
+  id: string;
+}
 
 export interface MangaSchema {
   mangadex_id: string;
@@ -7,16 +11,18 @@ export interface MangaSchema {
   updated_at: Date;
 }
 
-export interface MDUserSchema {
-  username: string;
-  session_key: string;
-  refresh_key: string;
+export interface MDSessionSchema {
+  payload: string;
+  md_session_key: string;
+  md_refresh_key: string;
 }
 
-export type CollectionType<T extends CollectionName> =
+export type DataType<T extends CollectionName> =
   T extends 'manga' ? MangaSchema :
-  T extends 'md_user' ? MDUserSchema :
-  unknown;
+  T extends 'user_session' ? MDSessionSchema :
+  object;
+
+export type CollectionType<T extends CollectionName> = DBSchema & DataType<T>;
 
 export type QueryType<T> = {
   [key in keyof T]: unknown;
