# src/index.ts
@@ -1,31 +1,17 @@
 import { defaultPort } from '@consts/config';
 import cookie from '@fastify/cookie';
 import swagger from '@fastify/swagger';
-import { AuthRequest, CollectionName, CollectionType, MDAuthResponse, QueryType, Response } from '@types';
+import { TypeBoxTypeProvider } from '@fastify/type-provider-typebox';
+import { createRecord } from '@lib/database';
+import { encryptPayload } from '@lib/util';
+import { ResponseSchema } from '@typebox';
+import { AuthRequest, MDAuthResponse, ResponseType, SessionPayloadType } from '@types';
 import fastify from 'fastify';
 import { writeFile } from 'fs/promises';
-import Surreal from 'surrealdb.js';
-
-const db = new Surreal(import.meta.env.VITE_DB_URL, {
-  auth: {
-    user: 'root',
-    pass: 'root',
-  },
-  ns: 'nnry',
-  db: 'nnry',
-});
-
-const createRecord = async <T extends CollectionName>(collection:T, record:Partial<Record<keyof CollectionType<T>,unknown>>) => {
-  await db.create(collection, record);
-};
-
-const runQuery = async <DataType>(query:string) => {
-  type RecordType = QueryType<DataType>;
-  return await db.query<[RecordType[], RecordType[]]>(query);
-};
+import userRoute from './features/user/user.route';
 
 const createApp = async () => {
-  const app = fastify();
+  const app = fastify().withTypeProvider<TypeBoxTypeProvider>();
 
   app.register(cookie, {
     secret: 'my-secret',
@@ -63,17 +49,14 @@ const createApp = async () => {
     },
   });
 
-  app.post<{ Body: AuthRequest, Reply: Response }>('/auth', {
+  app.post<{ Body: AuthRequest, Reply: ResponseType }>('/auth', {
     schema: {
       tags: [ 'Auth' ],
       body: {
-        $ref: 'AuthRequest#'
+        $ref: 'AuthRequest#',
       },
       response: {
-        201: {
-          description: 'Success',
-          type: 'object',
-        },
+        201: ResponseSchema,
       },
     },
   }, async (request, reply) => {
@@ -88,21 +71,37 @@ const createApp = async () => {
       reply.code(authResponse.status);
       return {
         result: 'Ko',
+        message: await authResponse.text(),
       };
     }
 
-    const authData = await authResponse.json() as MDAuthResponse & Response;
-    await createRecord('md_user', {
-      username: request.body.username,
-      session_key: authData.token.session,
-      refresh_key: authData.token.refresh,
-    });
+    const { username } = request.body;
 
+    const authData = await authResponse.json() as MDAuthResponse & ResponseType;
+    const payloadData = {
+      username,
+      timestamp: Date.now(),
+      ip: request.ip,
+    };
+    const payload = encryptPayload(payloadData);
+    const sessionRecord = await createRecord('user_session', {
+      payload,
+      md_session_key: authData.token.session,
+      md_refresh_key: authData.token.refresh,
+    });
+    const sessionPayload:SessionPayloadType = {
+      id: sessionRecord.id,
+      ...payloadData,
+    };
+
+    reply.cookie('session_key', encryptPayload(sessionPayload));
     reply.code(201);
     return {
       result: 'Ok',
     };
   });
+
+  app.register(userRoute, { prefix: '/user' });
 
   await app.ready();
   await writeFile('openapi.yaml', app.swagger({ yaml: true }));
@@ -114,7 +113,7 @@ const app = await createApp();
 const port = Number(import.meta.env.VITE_PORT ?? defaultPort);
 
 if (import.meta.env.PROD) {
-  app.listen({ port: port });
+  app.listen({ port });
 }
 
 export const viteNodeApp = app;
